--- a/style.css
+++ b/style.css
@@ -25,8 +25,198 @@ header {
   height: 50px;
 }
 
+.nav{
+  display: flex;
+}
 
+ul{
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+.nav-list {
+  width: 120px;
+  line-height: 70px;
+  color: #FAFAFA;
+  padding: 0 30px;
+  list-style: none;
+  font-size: 16px;
+}
 
 .nav-list a{
   color: #FAFAFA;
+}
+
+a{
+  text-decoration: none;
+}
+
+section {
+  display: block;
+}
+
+#mv{
+  width: 100%;
+  height: 650px;
+  text-align: center;
+  color: #FAFAFA;
+  background-image: url(img/mv.png);
+  background-size: cover;
+  background-position: center;
+}
+
+div{
+  display: block;
+}
+
+.container{
+  width: 1024px;
+  margin:0 auto;
+}
+
+.mv-title{
+  padding-top: 200px;
+  font-family: 'Raleway', sans-serif;
+}
+
+h1{
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.mv-text{
+  padding-top: 10px;
+  font-size: 20px;
+}
+
+p{
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.production-group{
+  display: flex;
+  flex-flow: row wrap;
+  width: 920px;
+  padding: 30px 0 90px 0;
+  margin: 0 auto;
+}
+
+.production:nth-child(-n+3){
+  margin-top: 0;
+}
+
+.bg-1{
+  background-image: url(img/sketch.jpg);
+}
+
+.production{
+  width: 300px;
+  height: 250px;
+  margin: 10px 10px 0 0;
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-2{
+  background-image: url(img/websuku.png);
+}
+
+.production:nth-child(3n){
+  margin-right: 0;
+}
+
+.bg-3{
+  background-image: url(img/write.jpg);
+}
+
+.bg-4{
+  background-image: url(img/webcamp.png);
+}
+
+.bg-5{
+  background-image: url(img/talk.jpg);
+}
+
+.bg-6{
+  background-image: url(img/webcamp-mother.png);
+}
+
+
+@media screen and (max-width: 768px) {
+
+.menu-box{
+  width: 40px;
+  height: 40px;
+  margin-right: 5%;
+  border:1px solid #FAFAFA;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: auto;
+}
+
+.list-bar:first-child{
+  margin-top:10px;
+}
+
+.list-bar{
+  display: block;
+  width: 25px;
+  height: 2px;
+  margin:5px auto;
+  background-color: #FAFAFA;
+}
+
+.nav-list{
+  display: none;
+  width: 100%;
+  line-height: 50px;
+  border-bottom: 1px solid gray;
+  text-align: center;
+  background-color: rgba(0,0,0,.9);
+}
+
+#mv{
+  background-image: url(img/code.png);
+}
+
+.container{
+  width: 90%;
+}
+
+.mv-title{
+  font-size: 40px;
+}
+
+.mv-text{
+  font-size: 18px;
+}
+
+.production-group{
+  width: 300px;
+}
+
+.production{
+  margin-right: 0px;
+}
+
+sp-none{
+  display: none;
+}
+
+
+
 }
